<resources>
    <string name="facebook_app_id" translatable="false">618659679291730</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb618659679291730</string>
    <string name="facebook_application_id" translatable="false">618659679291730</string>
    <string name="admob_application_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="startapp_app_id" translatable="false">209411604</string>
    <string name="app_name">LIFE OTT</string>
    <string name="app_title">Life Of OTT - Live TV &amp; Movie</string>
    <string name="app_version">1.3.3</string>
    <string name="contact_email">info@spagreen.net</string>
    <string name="copyright_text">Copyright @ Spagreen, All right reserved</string>
    <string name="featured_tv_channels">Featured Tv Channel</string>
    <string name="latest_movie">Latest Movies</string>
    <string name="latest_tv_series">Latest Tv Series</string>
    <string name="more">More</string>
    <string name="see_more">See More</string>
    <string name="movie">Movies</string>
    <string name="exclusive_movie">Exclusive Movies</string>
    <string name="live_tv">Live TV</string>
    <string name="tv_series">Web Series</string>
    <string name="country">Country</string>
    <string name="genre">Genre</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="no_item_found">No records found, Please try again</string>
    <string name="cast_n_crew">Cast and Crew</string>
    <string name="signin">Signin</string>
    <string name="reset">Reset Password</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="mobile">Mobile</string>
    <string name="whatsapp_mobile">WhatsApp No</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="director">Director</string>
    <string name="comments">Comments</string>
    <string name="your_comments">Your Comments</string>
    <string name="add_comments">Add Comments</string>
    <string name="no_internet">No internet connection !</string>
    <string name="copyright">Copyright</string>
    <string name="fetch_error">Unable to fetch data</string>
    <string name="login_first">You need to login first</string>
    <string name="comment_empty">Comment can not empty</string>
    <string name="error_toast">Something went wrong ! try later</string>
    <string name="vpn_detected">VPN Detected!!</string>
    <string name="close_vpn">Close VPN and re-open this app.</string>
    <string name="track_selection_title">Change Track</string>
    <string name="default_stream_quality">Default Stream Quality</string>
    <string name="default_download_quality">Default Download Quality</string>
    <string name="notification_error">Error</string>
    <string name="out_of_memory">No available space.</string>
    <string-array name="nav_item_name">
        <item>Home</item>
        <item>Search</item>
        <item>Watch Later</item>
        <item>Pay &amp; Watch</item>
        <item>Genre</item>
        <item>Profile</item>
        
        <item>Favourites</item>
        <item>My Subscriptions</item>
        
        <item>App Settings</item>
        <item>Sign Out</item>

    </string-array>
    <string-array name="nav_item_image">
        <item>ic_menu_home</item>
        <item>ic_search_grey</item>
        <item>ic_watch_later</item>
        <item>ic_bottom_web_series</item>
        <item>ic_menu_genre</item>
        <item>outline_person_24</item>
        
        <item>ic_bottom_fav</item>
        <item>ic_menu_tag</item>
        
        <item>ic_menu_settings</item>
        <item>outline_lock_24</item>
    </string-array>
    <string-array name="nav_item_name_2">
        <item>Home</item>
        <item>Search</item>
        <item>Watch Later</item>
        <item>Pay &amp; Watch</item>
        <item>Genre</item>
        <item>Login</item>
        <item>App Settings</item>
    </string-array>
    <string-array name="nav_item_image_2">
        <item>outline_home_24</item>
        <item>ic_search_grey</item>
        <item>ic_watch_later</item>
        <item>ic_bottom_web_series</item>
        <item>ic_menu_genre</item>
        <item>outline_lock_24</item>
        <item>ic_menu_settings</item>
    </string-array>
    <string-array name="paypal_currency_list">
        <item>USD</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>GBP</item>
        <item>CAD</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>HKD</item>
        <item>HUF</item>
        <item>ILS</item>
        <item>JPY</item>
        <item>MXN</item>
        <item>TWD</item>
        <item>NZD</item>
        <item>NOK</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>RUB</item>
        <item>SGD</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>THB</item>
        <item>INR</item>
    </string-array>
    <string name="year_range_start">1900</string>
    <string name="year_range_end">2024</string>
    <string name="title_activity_item_show">ItemShowActivity</string>
    <string name="title_activity_details">Watch Now</string>
    <string name="title_activity_reply">ReplyActivity</string>
    <string name="play_now">Play Now</string>
    <string name="go_premium">Go Premium</string>
    <string name="program_guide">Program Guide</string>
    <string name="live">Live</string>
    <string name="watching_on">Watching live on</string>
    <string name="all_tv_channel">All TV Channels</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="tv_channels">Tv Channels</string>
    <string name="watching_catch_up_tv">Watching Catch-up TV</string>
    <string name="deactive_account_text">If you do not want to use this account you can de-active easily.</string>
    <string name="reason_to_deactivate_account">Reason to deactivate account</string>
    <string name="enter_password">Enter Password</string>
    <string name="long_text">Aliquam eu mauris lectus. Pellentesque lacinia ut urna ut gravida. Proin libero sem, auctor in posuere sit amet</string>
    <string name="terms_condition_text">
        Aliquam eu mauris lectus. Pellentesque lacinia ut urna ut gravida. Proin libero sem, auctor in posuere sit amet, porta a nibh. Vivamus maximus nunc eu urna pellentesque vulputate. Phasellus lacinia ut diam id mattis. Ut fermentum, sem non viverra maximus, elit massa varius dolor, ac elementum mi nunc eu orci. Fusce ornare mi sed dapibus tempus. Quisque sollicitudin condimentum ex vitae imperdiet. Mauris et est non nibh gravida suscipit eget id est.
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Donec venenatis quis elit sed cursus. In commodo malesuada elit. Curabitur eget tortor ipsum. In consequat sollicitudin rhoncus. Donec interdum felis vitae ipsum mattis congue. Suspendisse eget tellus sit amet nunc egestas ultrices. Sed placerat eu arcu vel ullamcorper. Curabitur a dictum odio. Suspendisse fermentum ex vel ullamcorper scelerisque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam at nisl orci. Nullam ligula purus, pulvinar vel ligula sodales, tincidunt porttitor enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut semper tincidunt scelerisque. Praesent mollis magna ut consequat dictum.
        \n\nDuis in vestibulum dui, non pulvinar tortor. Maecenas finibus nulla purus, ac consectetur erat finibus vitae. Ut eget convallis dolor. Mauris a leo nunc. Nullam facilisis tincidunt odio eget laoreet. Integer sapien ipsum, fringilla id purus et, cursus convallis dolor. Etiam vel lacinia nibh. Donec sollicitudin fermentum eleifend. Vivamus quis mauris in libero vehicula aliquet sit amet quis odio. Etiam et tincidunt turpis, vel iaculis urna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam et mollis enim.
        \n\nPraesent interdum lectus suscipit enim dictum, sed laoreet nisl posuere. Curabitur accumsan tellus ac iaculis fermentum. Curabitur a purus nec nibh porta imperdiet. Vivamus dignissim libero ut mauris rhoncus finibus non at urna. Phasellus a varius elit, a blandit est. Cras sodales tincidunt purus sit amet condimentum. Phasellus consectetur sem nec nisi congue, id gravida risus tristique. Curabitur vulputate convallis purus, vel bibendum nunc ultricies at.
        \n\nInteger condimentum egestas eros mollis facilisis. Praesent vitae diam ac diam efficitur pretium nec vitae dui. Nunc quam est, porttitor ut dapibus non, sodales id nulla. Mauris facilisis malesuada dapibus. Aliquam erat volutpat. Vivamus vitae consequat mauris, nec dictum erat. Aliquam in consectetur est, sit amet varius risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent vulputate dapibus lorem, ut interdum lectus bibendum nec. Suspendisse potenti. Cras elementum cursus nisl, ac pulvinar eros fringilla vitae. Cras ac tortor sagittis diam feugiat tincidunt id at est. Curabitur consequat ante purus. Nunc malesuada scelerisque leo vel efficitur.
    </string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="explore_by_genre">Explore By Genre</string>
    <string name="explore_by_country">Explore By Country</string>
    <string name="share_this_app">Share This App</string>
    <string name="connect_to_tv">Connect to TV</string>
    <string name="share_body">I would like to share this TV &amp; Movie App.  Here you can download this from playstore :\n    https://play.google.com/store/apps/details?id=</string>
    <string name="term_of_services">Term of Services</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="account_deactivate_info"><![CDATA[Your account will be deactivate & only admin can activate again.]]></string>
    <string name="regular_program">Regular Program</string>
    <string name="international">International</string>
    <string name="server">Server</string>
    <string name="_1080p">1080P</string>
    <string name="dummy_name">Jhon Doe</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="push_notification">Push Notification</string>
    <string name="others">OTHERS</string>
    <string name="others_small">Others</string>
    <string name="no_data_found">No data found.</string>
    <string name="no_subscription_history">No subscription history found.</string>
    <string name="plan">Plan</string>
    <string name="no_active_subscription_found">No active subscription found.</string>
    <string name="upgrade_membership">Upgrade Membership</string>
    <string name="p_date">P.Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="action">Action</string>
    <string name="status">Status</string>
    <string name="type_keyword">Type keyword</string>
    <string name="year_range">Year Range</string>
    <string name="cancel">Cancel</string>
    <string name="tv_category">TV Category</string>
    <string name="name">Name</string>
    <string name="all_countries">All Countries</string>
    <string name="all_categories">All Categories</string>
    <string name="all_genres">All Genres</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="add_cash">Add cash</string>
    <string name="amount_in_rupee">Amount in rupee</string>
    <string name="amount">Amount</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="web_series">Web Series</string>
    <string name="pay_watch"><![CDATA[Pay & Watch]]></string>
</resources>