<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".fragments.ContactUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/curved_gold_stroke_bg"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:maxLines="1"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/colorHint"
            android:textSize="17sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/curved_gold_stroke_bg"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/colorHint"
            android:textSize="17sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/curved_gold_stroke_bg"
            android:hint="@string/mobile"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/colorHint"
            android:textSize="17sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/curved_gold_stroke_bg"
            android:gravity="top|start"
            android:hint="@string/message"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:minHeight="@dimen/_80sdp"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/colorHint"
            android:textSize="17sp" />


        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/curved_gold_bg"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>